# amaproto

./: CMakeLists.txt  Jenkinsfile  README.md  amactl.proto  amactl_requests.proto  amadb.proto  amadb_requests.proto  amaproc.proto  amaproc_requests.proto  build.sh  hash.proto  install.sh  job.proto  module.proto  option.proto  requests.proto  utils.proto  workspace.proto
data/agents/: ubuntu20.04-python3.8.dockerfile
tests/: test_foo.py
